--- a/1.html
+++ b/1.html
@@ -17,43 +17,43 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/eNGZ7H8ZuLY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </p>
     <p><a href="https://www.w3.org/TR/html52/"
-      target="_blank" title="html5 Specification">HyperText Markup Language (HTML)</a> is the standard markup language
-    for <strong>creating <u>web</u> pages</strong> and web applications.
-    Web browsers receive HTML documents from a web server or from local storage
-    and render the documents into multimedia web pages.</p>
+      target="_blank" title="html5 Specification">
+      <!--HTML 설명--> 
+      HyperText Markup Language (HTML)</a> is the standard markup language
+      for <strong>creating <u>web</u> pages</strong> and web applications.
+      Web browsers receive HTML documents from a web server or from local storage
+      and render the documents into multimedia web pages.</p>
     <p>HTML describes the structure of a web page semantically and originally included cues
-    for the appearance of the document.
-    <img src="goran-unsplash.jpg" width="50%">
+      for the appearance of the document.
+      <img src="goran-unsplash.jpg" width="50%">
     </p>
     <p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images
-    and other objects such as interactive forms may be embedded into the rendered page.
-    HTML provides a means to create structured documents by denoting structural semantics
-    for text such as headings, paragraphs, lists, links, quotes and other items.
-    HTML elements are delineated by tags, written using angle brackets.</p>
-    <br><br>Tags such as  and  directly introduce content into the page.
-    Other tags such as surround and provide information about document text and may include other tags as sub-elements.
-    Browsers do not display the HTML tags, but use them to interpret the content of the page.
+      and other objects such as interactive forms may be embedded into the rendered page.
+      HTML provides a means to create structured documents by denoting structural semantics
+      for text such as headings, paragraphs, lists, links, quotes and other items.
+      HTML elements are delineated by tags, written using angle brackets.</p>
+      <br><br>Tags such as  and  directly introduce content into the page.
+      Other tags such as surround and provide information about document text and may include other tags as sub-elements.
+      Browsers do not display the HTML tags, but use them to interpret the content of the page.
     <p>
-      <div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web1-9saoherssy.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <div id="disqus_thread"></div>
+      <script>
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
+      <!--Start of Tawk.to Script-->
+      <script type="text/javascript">
+      var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+      (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/606daf86f7ce18270937f48b/1f2m7b9pl';
+      s1.charset='UTF-8';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+      })();
+      </script>
+      <!--End of Tawk.to Script-->
   </body>
 
 </html>
