--- a/1.html
+++ b/1.html
@@ -18,7 +18,7 @@
     </p>
     <p><a href="https://www.w3.org/TR/html52/"
       target="_blank" title="html5 Specification">
-      <!--HTML 설명--> 
+      <!--HTML 설명-->
       HyperText Markup Language (HTML)</a> is the standard markup language
       for <strong>creating <u>web</u> pages</strong> and web applications.
       Web browsers receive HTML documents from a web server or from local storage
@@ -35,12 +35,29 @@
       <br><br>Tags such as  and  directly introduce content into the page.
       Other tags such as surround and provide information about document text and may include other tags as sub-elements.
       Browsers do not display the HTML tags, but use them to interpret the content of the page.
+
     <p>
-    <div id="disqus_thread"></div>
+      <div id="disqus_thread"></div>
       <script>
+          /**
+          *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+          *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+          /*
+          var disqus_config = function () {
+          this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+          };
+          */
+          (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://web-4wtcdongkx.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+          })();
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </p>
+
       <!--Start of Tawk.to Script-->
       <script type="text/javascript">
       var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
