--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>WEB1 - Welcome</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9RD33TYV6Y"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MJVJXDRPM8"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-9RD33TYV6Y');
+      gtag('config', 'G-MJVJXDRPM8');
     </script>
-    
+
   </head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
